Update .gitignore and add LaTeX build files for master-paper
- Updated .gitignore to exclude additional LaTeX output files including .aux, .out, .log, .pdf, .bbl, .blg, .png, and author_config.tex.
- Added master-paper.fdb_latexmk to track LaTeX build dependencies and outputs.
- Created master-paper.fls to log file inputs during the LaTeX compilation process.
- Added master-paper.toc to include the table of contents for the document.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ __pycache__/
 
 # Local papers (do not commit PDFs)
 papers/related/
+
+papers/**/*.aux
+papers/**/*.out
+papers/**/*.log
+papers/**/*.pdf
+papers/**/*.bbl
+papers/**/*.blg
+papers/**/*.png
+papers/**/*Zone.Identifier
+papers/**/author_config.tex
